# floor-piano

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-webui.txt  requirements.txt
docs/: ASTRA_PI5_SETUP.md  ASTRA_PRO_PI5_SETUP.md  CODE_REVIEW.md  PROJEKTDOKUMENTATION.md  SETUP.md  SHOPPING_LIST.md  VERSION_2_PLAN.md  floor-piano.service
src/: audio.py  calibrate.py  constants.py  demo_mock.py  demo_video.py  depth_camera.py  detection.py  main.py  mat_calibration.py  placement.py
src/sounds/: download_samples.sh  generate_samples.py  play_test.py
tests/: conftest.py  test_autodetect.py  test_blobs.py  test_depth_detect.py  test_detection.py  test_geometry.py  test_keyboard.py  test_mat_calibration.py  test_mocks.py  test_openni2_camera.py  test_pipeline.py  test_placement.py  test_samples.py  test_tile_store.py  test_video_detect.py
tools/: generate_aruco.py  probe_astra.py  probe_gemini.py  view_gemini.py
webui/: autodetect.py  camera_source.py  depth_detect.py  server.py  tile_store.py  video_detect.py
webui/static/: app.js  index.html  style.css
